// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Size 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bp bq br bs"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Default
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 bt b5 bu b7 b8 b9 ba bv bw bx by bk bl bm bn bo"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Large
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 bz b5 c0 b7 b8 b9 ba c1 c2 c3 c4 bf bg bh bi bj"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Larger
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Button Variant 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bg bh bi bj"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Default
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bk bl bm bn bo"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Primary
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bp bq br bs"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Secondary
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Card Poster 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd"
      data-baseweb="card"
      onClick={[Function]}
    >
      <img
        className="b9 b7 ce cf cc cg cd ch"
        src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
      />
      <div
        className="ci cj ck cl"
      >
        <h1
          className="b3 cm b5 cn co az b0 b1 cp cq cr cs ct cu cv cw cx cy"
        >
          July 26
        </h1>
        <div
          className="cz bf b3 bt d0 c0"
        />
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Card Thumbnail 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd"
      data-baseweb="card"
      onClick={[Function]}
    >
      <img
        className="b9 b7 ce cf cc d1 cd d2"
        src="https://image.tmdb.org/t/p/w300/aQLygZOIKai6aaiBAeeKpIWO5nc.jpg"
      />
      <div
        className="ci cj ck cl"
      >
        <div
          className="cz bf b3 bt d0 c0"
        >
          <div
            className="cz d3 b3 bt d0 c0"
          >
            <div
              className="co cl"
              data-baseweb="block"
            >
              Once Upon a Time in Hollywood
            </div>
            <div
              className=""
              data-baseweb="block"
            >
              <svg
                className="d4 d5 d6 d7 d8"
                data-baseweb="icon"
                viewBox="0 0 20 20"
              >
                <title>
                  Show
                </title>
                <path
                  d="M.2 10a11 11 0 0119.6 0A11 11 0 01.2 10zm9.8 4a4 4 0 100-8 4 4 0 000 8zm0-2a2 2 0 110-4 2 2 0 010 4z"
                />
              </svg>
               7.5k
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Credit Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="d9 da cq cs db"
    >
      <div
        className="dc dd de"
      >
        <div
          aria-label={null}
          className="df dg dh di dj d4"
          data-baseweb="avatar"
          role={null}
        >
          <img
            alt="Joaquin Phoenix"
            className="df dg dh di dj dk dl dm dn"
            onError={[Function]}
            src="https://image.tmdb.org/t/p/w185/zixTWuMZ1D8EopgOhLVZ6Js2ux3.jpg"
          />
        </div>
      </div>
      <div
        className="do dd dp dq"
      >
        <div
          className="co b3 d0 bz dr"
          data-baseweb="typo-paragraphlarge"
        >
          Joaquin Phoenix
        </div>
        <div
          className="d3 b3 b5 b4 b6"
          data-baseweb="typo-labelsmall"
        >
          Arthur Fleck / Joker
        </div>
      </div>
    </div>
    <div
      className="d9 da cq cs db"
    >
      <div
        className="dc dd de"
      >
        <div
          aria-label={null}
          className="df dg dh di dj d4"
          data-baseweb="avatar"
          role={null}
        >
          <img
            alt="Robert De Niro"
            className="df dg dh di dj dk dl dm dn"
            onError={[Function]}
            src="https://image.tmdb.org/t/p/w185/8Bgdfv1oN9Mw0YuMHP6fw8KzDkc.jpg"
          />
        </div>
      </div>
      <div
        className="do dd dp dq"
      >
        <div
          className="co b3 d0 bz dr"
          data-baseweb="typo-paragraphlarge"
        >
          Robert De Niro
        </div>
        <div
          className="d3 b3 b5 b4 b6"
          data-baseweb="typo-labelsmall"
        >
          Murray Franklin
        </div>
      </div>
    </div>
    <div
      className="d9 da cq cs db"
    >
      <div
        className="dc dd de"
      >
        <div
          aria-label={null}
          className="df dg dh di dj d4"
          data-baseweb="avatar"
          role={null}
        >
          <img
            alt="Zazie Beetz"
            className="df dg dh di dj dk dl dm dn"
            onError={[Function]}
            src="https://image.tmdb.org/t/p/w185/sgxzT54GnvgeMnOZgpQQx9csAdd.jpg"
          />
        </div>
      </div>
      <div
        className="do dd dp dq"
      >
        <div
          className="co b3 d0 bz dr"
          data-baseweb="typo-paragraphlarge"
        >
          Zazie Beetz
        </div>
        <div
          className="d3 b3 b5 b4 b6"
          data-baseweb="typo-labelsmall"
        >
          Sophie Dumond
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Deck Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="ds dt du"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <ul
        className="dv dw dx ds dy db dz e0 e1 e2 e3"
      >
        <li
          className="e4 dj"
        >
          <div
            className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b9 b7 ce cf cc cg cd ch"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="ci cj ck cl"
            >
              <h1
                className="b3 cm b5 cn co az b0 b1 cp cq cr cs ct cu cv cw cx cy"
              >
                July 26
              </h1>
              <div
                className="cz bf b3 bt d0 c0"
              />
            </div>
          </div>
        </li>
        <li
          className="e4 dj"
        >
          <div
            className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b9 b7 ce cf cc cg cd ch"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="ci cj ck cl"
            >
              <h1
                className="b3 cm b5 cn co az b0 b1 cp cq cr cs ct cu cv cw cx cy"
              >
                July 26
              </h1>
              <div
                className="cz bf b3 bt d0 c0"
              />
            </div>
          </div>
        </li>
        <li
          className="e4 dj"
        >
          <div
            className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b9 b7 ce cf cc cg cd ch"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="ci cj ck cl"
            >
              <h1
                className="b3 cm b5 cn co az b0 b1 cp cq cr cs ct cu cv cw cx cy"
              >
                July 26
              </h1>
              <div
                className="cz bf b3 bt d0 c0"
              />
            </div>
          </div>
        </li>
        <li
          className="e4 dj"
        >
          <div
            className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b9 b7 ce cf cc cg cd ch"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="ci cj ck cl"
            >
              <h1
                className="b3 cm b5 cn co az b0 b1 cp cq cr cs ct cu cv cw cx cy"
              >
                July 26
              </h1>
              <div
                className="cz bf b3 bt d0 c0"
              />
            </div>
          </div>
        </li>
        <li
          className="e4 dj"
        >
          <div
            className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b9 b7 ce cf cc cg cd ch"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="ci cj ck cl"
            >
              <h1
                className="b3 cm b5 cn co az b0 b1 cp cq cr cs ct cu cv cw cx cy"
              >
                July 26
              </h1>
              <div
                className="cz bf b3 bt d0 c0"
              />
            </div>
          </div>
        </li>
        <li
          className="e4 dj"
        >
          <div
            className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b9 b7 ce cf cc cg cd ch"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="ci cj ck cl"
            >
              <h1
                className="b3 cm b5 cn co az b0 b1 cp cq cr cs ct cu cv cw cx cy"
              >
                July 26
              </h1>
              <div
                className="cz bf b3 bt d0 c0"
              />
            </div>
          </div>
        </li>
        <li
          className="e4 dj"
        >
          <div
            className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b9 b7 ce cf cc cg cd ch"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="ci cj ck cl"
            >
              <h1
                className="b3 cm b5 cn co az b0 b1 cp cq cr cs ct cu cv cw cx cy"
              >
                July 26
              </h1>
              <div
                className="cz bf b3 bt d0 c0"
              />
            </div>
          </div>
        </li>
      </ul>
      <button
        className="e5 e6 e7 av e8 e9 ea eb bz ec ed ee ef eg"
        onClick={[Function]}
      >
        &lt;
      </button>
      <button
        className="e5 e6 e7 av e8 e9 ea eb bz ec ed ee ef eh"
        onClick={[Function]}
      >
        &gt;
      </button>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Layout Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="ei ej ek el em"
    >
      <p
        className="b3 bt d0 c0 en eo ep eq er"
      >
        Inside content
      </p>
      <div
        className="db es ds ei et eu"
      >
        <div
          className="do ev ew"
        >
          <h2
            className="b3 ex b5 dr ey ez cp eo f0 f1 f2 f3 f4"
          >
            Section 1
          </h2>
        </div>
        <div
          className="f5 ev f6"
        >
          <div
            className="f7"
          >
            <p
              className="b3 bt d0 c0 en eo ep eq er"
            >
              Inside section 1
            </p>
          </div>
        </div>
      </div>
      <div
        className="db es ds ei et eu"
      >
        <div
          className="do ev ew"
        >
          <h2
            className="b3 ex b5 dr ey ez cp eo f0 f1 f2 f3 f4"
          >
            Section 2
          </h2>
        </div>
        <div
          className="f5 ev f6"
        >
          <div
            className="f7"
          >
            <p
              className="b3 bt d0 c0 en eo ep eq er"
            >
              Inside section 2
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Modal Size 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bp bq br bs"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open default modal
    </button>
    <br />
    <br />
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bp bq br bs"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open full modal
    </button>
    <br />
    <br />
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bp bq br bs"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open auto modal
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots PaginatedItems Base 1`] = `
Array [
  <div
    className=""
  >
    <div>
      <div
        className="f8 f9 fa bg fb fc fd fe db es dy dz cj"
      >
        <div
          className="ds ff fg fh"
          role="rowgroup"
        >
          <div
            className="db af"
            role="row"
          >
            <div
              className="b3 b4 d0 bu bf db fh cr cs ct cq"
            >
              <div
                className="d9 da cq cs db"
              >
                <div
                  className="dc dd de"
                >
                  <div
                    aria-label={null}
                    className="df dg dh di dj d4"
                    data-baseweb="avatar"
                    role={null}
                  >
                    <img
                      alt="Joaquin Phoenix"
                      className="df dg dh di dj dk dl dm dn"
                      onError={[Function]}
                      src="https://image.tmdb.org/t/p/w185/zixTWuMZ1D8EopgOhLVZ6Js2ux3.jpg"
                    />
                  </div>
                </div>
                <div
                  className="do dd dp dq"
                >
                  <div
                    className="co b3 d0 bz dr"
                    data-baseweb="typo-paragraphlarge"
                  >
                    Joaquin Phoenix
                  </div>
                  <div
                    className="d3 b3 b5 b4 b6"
                    data-baseweb="typo-labelsmall"
                  >
                    Arthur Fleck / Joker
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="db af"
            role="row"
          >
            <div
              className="b3 b4 d0 bu bf db fh cr cs ct cq"
            >
              <div
                className="d9 da cq cs db"
              >
                <div
                  className="dc dd de"
                >
                  <div
                    aria-label={null}
                    className="df dg dh di dj d4"
                    data-baseweb="avatar"
                    role={null}
                  >
                    <img
                      alt="Robert De Niro"
                      className="df dg dh di dj dk dl dm dn"
                      onError={[Function]}
                      src="https://image.tmdb.org/t/p/w185/8Bgdfv1oN9Mw0YuMHP6fw8KzDkc.jpg"
                    />
                  </div>
                </div>
                <div
                  className="do dd dp dq"
                >
                  <div
                    className="co b3 d0 bz dr"
                    data-baseweb="typo-paragraphlarge"
                  >
                    Robert De Niro
                  </div>
                  <div
                    className="d3 b3 b5 b4 b6"
                    data-baseweb="typo-labelsmall"
                  >
                    Murray Franklin
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="db af"
            role="row"
          >
            <div
              className="b3 b4 d0 bu bf db fh cr cs ct cq"
            >
              <div
                className="d9 da cq cs db"
              >
                <div
                  className="dc dd de"
                >
                  <div
                    aria-label={null}
                    className="df dg dh di dj d4"
                    data-baseweb="avatar"
                    role={null}
                  >
                    <img
                      alt="Zazie Beetz"
                      className="df dg dh di dj dk dl dm dn"
                      onError={[Function]}
                      src="https://image.tmdb.org/t/p/w185/sgxzT54GnvgeMnOZgpQQx9csAdd.jpg"
                    />
                  </div>
                </div>
                <div
                  className="do dd dp dq"
                >
                  <div
                    className="co b3 d0 bz dr"
                    data-baseweb="typo-paragraphlarge"
                  >
                    Zazie Beetz
                  </div>
                  <div
                    className="d3 b3 b5 b4 b6"
                    data-baseweb="typo-labelsmall"
                  >
                    Sophie Dumond
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c1 c2 db"
    >
      <div
        aria-label="pagination"
        className="db af bf b3 bt b5 bu"
        data-baseweb="pagination"
      >
        <button
          className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw fi ay az b0 b1 b2 b3 bt fj bu b7 b8 b9 ba bv bw bx by d3 bg fk fl fm fn fo fp"
          data-baseweb="button"
          disabled={false}
          onClick={[Function]}
        >
          &lt;
        </button>
        <div
          className="du dq fq fr"
        >
          <div
            aria-controls={null}
            aria-expanded="false"
            aria-haspopup="true"
            className="b3 bt d0 c0 dj du ds"
            data-baseweb="select"
            onClick={[Function]}
          >
            <div
              className="b9 b7 b8 ba dj dt ds db fs av ft f9 fu at au bf fv bg fw"
              onClick={[Function]}
              onKeyDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="dj du do ev fx db af fy dt bb bc fz cs"
              >
                <div
                  aria-selected="true"
                  className="bu dj g0 dy cf dt g1 g2 g3 du cr ct g4 be bf b3 bt b5"
                  disabled={false}
                  value={1}
                >
                  1
                </div>
                <div
                  aria-disabled={false}
                  aria-expanded={false}
                  aria-label={null}
                  aria-labelledby={null}
                  aria-required={null}
                  className="du d4 cf bg e9 fw dj aq b0 b2 az b1 cr ct cq cs g5 g6"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  tabIndex={0}
                />
              </div>
              <div
                className="dj du db dd af g7 be"
              >
                <svg
                  className="d4 g8 bf g5 g9 av"
                  data-baseweb="icon"
                  viewBox="0 0 24 24"
                >
                  <title>
                    open
                  </title>
                  <path
                    d="M12.7071 15.2929L17.1464 10.8536C17.4614 10.5386 17.2383 10 16.7929 10L7.20711 10C6.76165 10 6.53857 10.5386 6.85355 10.8536L11.2929 15.2929C11.6834 15.6834 12.3166 15.6834 12.7071 15.2929Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <span
          aria-label="page 1 of 2"
          className="ga gb bg d3"
        >
          of 2
        </span>
        <button
          className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw fi ay az b0 b1 b2 b3 bt fj bu b7 b8 b9 ba bv bw bx by d3 bg fk fl fm fn fo fp"
          data-baseweb="button"
          disabled={false}
          onClick={[Function]}
        >
          &gt;
        </button>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots PopoverMenu Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="db gc gd"
      data-baseweb="block"
    >
      <button
        aria-controls={null}
        aria-expanded="false"
        aria-haspopup="true"
        className="dk af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba cr ct bd cs co bg fk fm fo ge"
        data-baseweb="button"
        disabled={false}
        onClick={[Function]}
      >
        <svg
          className="d4 g8 gf ge gg"
          data-baseweb="icon"
          viewBox="0 0 24 24"
        >
          <title>
            Menu
          </title>
          <rect
            height="2"
            rx="1"
            width="16"
            x="4"
            y="11"
          />
          <rect
            height="2"
            rx="1"
            width="16"
            x="4"
            y="5"
          />
          <rect
            height="2"
            rx="1"
            width="16"
            x="4"
            y="17"
          />
        </svg>
      </button>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots ReviewItem Review Item 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="gh gi d9 c2 cq cs"
    >
      <div
        className="d3 b3 b5 b4 b6"
        data-baseweb="typo-labelsmall"
      >
        Gimly
      </div>
      <p
        className="b3 bt d0 c0 en eo ep eq er"
      >
        I'm not here to explain 
        <em>
          Once Upon a Time In Hollywood
        </em>
        , just to enjoy it. 
      </p>
      <button
        className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 bt b5 bu b7 b8 b9 ba cr ct cq cs d3 bg fk gj fm gk fo gl"
        data-baseweb="button"
        disabled={false}
        onClick={[Function]}
      >
        Read more
      </button>
    </div>
    <div
      className="gm gn d9 c2 cq cs"
    >
      <div
        className="d3 b3 b5 b4 b6"
        data-baseweb="typo-labelsmall"
      >
        JPV852
      </div>
      <p
        className="b3 bt d0 c0 en eo ep eq er"
      >
        Well, the last 15-minutes were great, the first 2.5 hours on the other hand was... uneventful. I have an interest in Hollywood, more from the 1980s though, so some of the slower scenes still kept my attention, but there's no real plot and minimal character development. 
      </p>
      <button
        className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 bt b5 bu b7 b8 b9 ba cr ct cq cs d3 bg fk gj fm gk fo gl"
        data-baseweb="button"
        disabled={false}
        onClick={[Function]}
      >
        Read more
      </button>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Search Size 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="b3 b4 d0 bu bf db ds"
      data-baseweb="input"
    >
      <div
        className="dj db ds ft f9 go at au b9 ba b7 b8 b3 b4 d0 bu bf gp bp"
        data-baseweb="base-input"
      >
        <div
          className="db af bd"
        >
          <svg
            className="d4 g8 gf gq gr"
            data-baseweb="icon"
            viewBox="0 0 24 24"
          >
            <title>
              Search
            </title>
            <path
              clipRule="evenodd"
              d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={null}
          aria-labelledby={null}
          aria-required={false}
          autoComplete="on"
          className="dj bg gs gt aq ds cf gu gv d9 da fz gw b3 b4 d0 bu bf gx gy"
          disabled={false}
          inputMode="text"
          name=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          pattern={null}
          placeholder="Default"
          required={false}
          rows={null}
          type="text"
        />
      </div>
    </div>
    <br />
    <div
      className="b3 bt d0 c0 bf db ds"
      data-baseweb="input"
    >
      <div
        className="dj db ds ft f9 go at au b9 ba b7 b8 b3 bt d0 c0 bf gp bp"
        data-baseweb="base-input"
      >
        <div
          className="db af bd"
        >
          <svg
            className="d4 g8 gf gq gr"
            data-baseweb="icon"
            viewBox="0 0 24 24"
          >
            <title>
              Search
            </title>
            <path
              clipRule="evenodd"
              d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={null}
          aria-labelledby={null}
          aria-required={false}
          autoComplete="on"
          className="dj bg gs gt aq ds cf gu gv bb bc gz h0 b3 bt d0 c0 bf gx gy"
          disabled={false}
          inputMode="text"
          name=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          pattern={null}
          placeholder="Medium"
          required={false}
          rows={null}
          type="text"
        />
      </div>
    </div>
    <br />
    <div
      className="b3 bz d0 dr bf db ds"
      data-baseweb="input"
    >
      <div
        className="dj db ds ft f9 go at au b9 ba b7 b8 b3 bz d0 dr bf gp bp"
        data-baseweb="base-input"
      >
        <div
          className="db af bd"
        >
          <svg
            className="d4 g8 gf gq gr"
            data-baseweb="icon"
            viewBox="0 0 24 24"
          >
            <title>
              Search
            </title>
            <path
              clipRule="evenodd"
              d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={null}
          aria-labelledby={null}
          aria-required={false}
          autoComplete="on"
          className="dj bg gs gt aq ds cf gu gv bv bw h1 h2 b3 bz d0 dr bf gx gy"
          disabled={false}
          inputMode="text"
          name=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          pattern={null}
          placeholder="Large"
          required={false}
          rows={null}
          type="text"
        />
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Tag Base 1`] = `
Array [
  <div
    className=""
  >
    <span
      aria-label="button"
      className="b3 h3 b5 b6 af h4 f9 gs h5 h6 h7 h8 dj en h9 ae g5 fs ha hb hc hd he hf bd be aq  "
      data-baseweb="tag"
      onClick={null}
      onKeyDown={[Function]}
      role="button"
      tabIndex={null}
    >
      <span
        className="dt g2 g1 hg"
        title="Action"
      >
        Action
      </span>
    </span>
    <span
      aria-label="button"
      className="b3 h3 b5 b6 af h4 f9 gs h5 h6 h7 h8 dj en h9 ae g5 fs ha hb hc hd he hf bd be aq  "
      data-baseweb="tag"
      onClick={null}
      onKeyDown={[Function]}
      role="button"
      tabIndex={null}
    >
      <span
        className="dt g2 g1 hg"
        title="Thriller"
      >
        Thriller
      </span>
    </span>
    <span
      aria-label="button"
      className="b3 h3 b5 b6 af h4 f9 gs h5 h6 h7 h8 dj en h9 ae g5 fs ha hb hc hd he hf bd be aq  "
      data-baseweb="tag"
      onClick={null}
      onKeyDown={[Function]}
      role="button"
      tabIndex={null}
    >
      <span
        className="dt g2 g1 hg"
        title="Drama"
      >
        Drama
      </span>
    </span>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Typography Size 1`] = `
Array [
  <div
    className=""
  >
    <h2
      className="b3 ex b5 dr ey ez cp eo f0 f1 f2 f3 f4"
    >
      H2: Overview
    </h2>
    <h3
      className="b3 ex fj dr hh hi"
    >
      H3: Popular movies
    </h3>
    <p
      className="b3 bt d0 c0 en eo ep eq er"
    >
      P1: As the gang return to Jumanji to rescue one of their own, they discover that nothing is as they expect. The players will have to brave parts unknown and unexplored in order to escape the world’s most dangerous game.
    </p>
  </div>,
  <div
    className=""
  />,
]
`;
